# api-test

./: Dockerfile  api.py  build.sh  manifest.yaml  pyproject.toml
Dockerfiles/: Dockerfile  build.sh
kubernetes/: manifest.yaml
